# Yknaa

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Controller/: card.c  card.h  deck.c  deck.h  user.c  user.h
Database/: createDatabase.c  createDatabase.h  init.sql
View/: front.cpp  front.h
